fix(Navbar): z-index should not cover alert message

--- a/src/js/components/common/Navbar.styl
+++ b/src/js/components/common/Navbar.styl
@@ -36,7 +36,7 @@
 .navbarWarpper
     position: fixed
     top: 0
-    z-index: 9999
+    z-index: 99
     box-shadow: 0px 1px 5px #50514F
 .navbar
     a
